#ifndef INFINITYNET__H
#define INFINITYNET__H

#ifdef __cplusplus
#extern "C" {
#endif

#define PATIENT_NAME_SIZE 26
#define PATIENT_INITIALS_SIZE 4
#define PATIENT_ID_SIZE 13
#define PHYSICIAN_NAME_SIZE 13
#define BED_LABEL_SIZE 8
#define CURR_MSG_SIZE 50
#define PATIENT_ID_EXTENDED_SIZE 21

#define NDO_PDS_BED_CONFIG 10
#define NDO_PDS_DISPLAY_SETUP 11
#define NDO_PDS_WAVEFORM 12
#define NDO_PDS_WAVEFORM_SETUP 13
#define NDO_PDS_PARAMETER_AND_ALARM 14
#define NDO_PDS_PARAMETER_MEASUREMENT_TIME 15
#define NDO_PDS_PARAMETER_BOX_SETUP 16
#define NDO_PDS_SIGNAL_GROUP_INTERVAL_MEASUREMENT 17
#define NDO_PDS_CURRENT_MSG_DISPLAYED 18
#define NDO_PDS_CPS_DEVICE_STATUS 19
#define NDO_PDS_SUMMARY_ALARM_INFO 20
#define NDO_PDS_QRS_BLIP 21
#define NDO_PDS_PLS_SIG 22
#define NDO_PDS_PAT_LOC 23
#define NDO_PDS_VENT_CURRENT_MSG 24
#define NDO_PDS_VENT_WV_DESC 25
#define NDO_PDS_VENT_PARAM_LIST 26
#define NDO_PDS_VENT_VOL_WV_DESC 27
#define UNKNOWN_NDO_PDS_28 28
#define UNKNOWN_NDO_34 34


#define NDO_ACS_MSG_HDR 100


#define SIGNAL_GROUP_ECG 1
#define SIGNAL_GROUP_RESP 2
#define SIGNAL_GROUP_ART 3
#define SIGNAL_GROUP_PA 4
#define SIGNAL_GROUP_ICP 5
#define SIGNAL_GROUP_CVP 6
#define SIGNAL_GROUP_LA 7
#define SIGNAL_GROUP_RA 8
#define SIGNAL_GROUP_LV 9
#define SIGNAL_GROUP_RV 10
#define SIGNAL_GROUP_GP1 11
#define SIGNAL_GROUP_GP2 12
#define SIGNAL_GROUP_P1A 13
#define SIGNAL_GROUP_P1B 14
#define SIGNAL_GROUP_P1C 15
#define SIGNAL_GROUP_P1D 16
#define SIGNAL_GROUP_P2A 17
#define SIGNAL_GROUP_P2B 18
#define SIGNAL_GROUP_P2C 19
#define SIGNAL_GROUP_P2D 20
#define SIGNAL_GROUP_P3A 21
#define SIGNAL_GROUP_P3B 22
#define SIGNAL_GROUP_P3C 23
#define SIGNAL_GROUP_P3D 24

#define SIGNAL_GROUP_SPO2 25
#define SIGNAL_GROUP_EEG1 59
#define SIGNAL_GROUP_EEG2 60
#define SIGNAL_GROUP_EEG3 61
#define SIGNAL_GROUP_EEG4 62

#define SIGNAL_GROUP_AIRWAY_CO2_VENT 63
#define SIGNAL_GROUP_ICP2 64
#define SIGNAL_GROUP_BIS 65
#define SIGNAL_GROUP_LAB_DATA 66
#define SIGNAL_GROUP_VENT_SETTING 67
#define SIGNAL_GROUP_SPO2_ATHENA 68
#define SIGNAL_GROUP_NMT 69
#define SIGNAL_GROUP_FASTTEMP 70
#define SIGNAL_GROUP_CNCCO 71
#define SIGNAL_GROUP_CNAP 72
#define SIGNAL_GROUP_PIC 73

#define PARAM_ID_HR 1
#define PARAM_ID_PP 2
#define PARAM_ID_ARR 3
#define PARAM_ID_PVC_RATE 4
#define PARAM_ID_PR 5
#define PARAM_ID_RR 6;
#define PARAM_ID_DIASTOLIC 7
#define PARAM_ID_SYSTOLIC 8
#define PARAM_ID_MEAN 9
#define PARAM_ID_CPP 10
#define PARAM_ID_A 11
#define PARAM_ID_B 12
#define PARAM_ID_DELTA 13
#define PARAM_ID_SATURATION 14
#define PARAM_ID_ETCO2 15
#define PARAM_ID_ICO2 16
#define PARAM_ID_CO 17
#define PARAM_ID_CO_AVG 18
#define PARAM_ID_TI 19
#define PARAM_ID_TB 20
#define PARAM_ID_PWP 21
#define PARAM_ID_SA1 22
#define PARAM_ID_SVO2 23
#define PARAM_ID_SAO2 24
#define PARAM_ID_CCO 25
#define PARAM_ID_CCI 26
#define PARAM_ID_ICO 27
#define PARAM_ID_ICI 28
#define PARAM_ID_SRV 29
#define PARAM_ID_SRVI 30


#define SIGID_ECG 0

void infinityNet_parsePacket( uint8_t *data, size_t len );

#ifdef __cplusplus
#extern "C" {
#endif

#endif
